--- a/scheduling.conf
+++ b/scheduling.conf
@@ -1,4 +1,4 @@
-// # of sProcess
+// # of Processes
 numprocess 3
 
 // mean deviation
@@ -7,10 +7,10 @@ meandev 1100
 // standard deviation
 standdev 510
 
-// process    # I/O blocking
-process 100
-process 500
-process 30
+// process    # I/O blocking  # priority(ascending)
+process 100 1
+process 500 2
+process 60 3
 
 // duration of the simulation in milliseconds
 runtime 5000
